Provide a message to Google Update for the user when a system-level Chrome is already installed.

BUG=625322

Review-Url: https://codereview.chromium.org/2168703002
Cr-Commit-Position: refs/heads/master@{#413812}

Former-commit-id: 70c65451381988189ef8d591f581ac62653f2829